--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -1,76 +1,72 @@
 config:
   credentials: []
   project_repos:
+    github.com/AI4S2S/lilio:
+      branch: main
+      repo: https://github.com/AI4S2S/lilio/
     github.com/EOSC-synergy/sqaaas-tooling:
       branch: release/1.7.8
       repo: https://github.com/EOSC-synergy/sqaaas-tooling
-    gitlab.in2p3.fr/escape2020/wp3/eossr:
-      branch: master
-      repo: https://gitlab.in2p3.fr/escape2020/wp3/eossr/
 environment:
   JPL_DOCKERFORCEBUILD: enabled
   JPL_KEEPGOING: enabled
 sqa_criteria:
   QC.Acc:
     repos:
-      gitlab.in2p3.fr/escape2020/wp3/eossr git:
+      github.com/AI4S2S/lilio git:
         commands:
-        - /usr/bin/env sh .sqa/script.gimpy-lemon-harrier.sh
-        container: qc.acc_chummy-lemon-balinese
+        - /usr/bin/env sh .sqa/script.muzzy-copper-terrier.sh
+        container: qc.acc_shaky-sangria-hippopotamus
   QC.Doc:
     repos:
-      gitlab.in2p3.fr/escape2020/wp3/eossr find_doc_files.py:
+      github.com/AI4S2S/lilio find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.bluesy-aqua-wolverine.sh
-        container: qc.doc_scanty-buff-cuscus
-      gitlab.in2p3.fr/escape2020/wp3/eossr git:
+        - /usr/bin/env sh .sqa/script.paltry-cinnamon-devil.sh
+        container: qc.doc_grumpy-cyan-monkey
+      github.com/AI4S2S/lilio git:
         commands:
-        - /usr/bin/env sh .sqa/script.boozy-bronze-ant.sh
-        container: qc.doc_messy-champagne-fox
-      gitlab.in2p3.fr/escape2020/wp3/eossr markdownlint:
+        - /usr/bin/env sh .sqa/script.grumpy-scarlet-hedgehog.sh
+        container: qc.doc_wimpy-ecru-rattlesnake
+      github.com/AI4S2S/lilio markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.beady-chartreuse-nightingale.sh
-        container: qc.doc_lanky-turquoise-leopard
-      gitlab.in2p3.fr/escape2020/wp3/eossr restructuredtext-lint:
+        - /usr/bin/env sh .sqa/script.baggy-tan-reindeer.sh
+        container: qc.doc_ready-tangerine-pinscher
+      github.com/AI4S2S/lilio restructuredtext-lint:
         commands:
-        - /usr/bin/env sh .sqa/script.trippy-asparagus-dragon.sh
-        container: qc.doc_woolly-saffron-eagle
+        - /usr/bin/env sh .sqa/script.trippy-lilac-cheetah.sh
+        container: qc.doc_fuzzy-sapphire-zonkey
   QC.Lic:
     repos:
-      gitlab.in2p3.fr/escape2020/wp3/eossr licensee:
+      github.com/AI4S2S/lilio licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.stinky-brown-spaniel.sh
-        container: qc.lic_bumpy-alizarin-chow
+        - /usr/bin/env sh .sqa/script.smelly-mustard-jackal.sh
+        container: qc.lic_leaky-jade-cuscus
   QC.Met:
     repos:
-      gitlab.in2p3.fr/escape2020/wp3/eossr validate_codemeta:
+      github.com/AI4S2S/lilio cff-converter-python:
         commands:
-        - /usr/bin/env sh .sqa/script.randy-ultramarine-worm.sh
-        container: qc.met_geeky-cerise-neanderthal
+        - /usr/bin/env sh .sqa/script.smelly-cinnabar-jellyfish.sh
+        container: qc.met_breezy-coral-mayfly
   QC.Sec:
     repos:
-      gitlab.in2p3.fr/escape2020/wp3/eossr bandit:
+      github.com/AI4S2S/lilio bandit:
         commands:
-        - /usr/bin/env sh .sqa/script.flabby-maroon-indri.sh
-        container: qc.sec_scummy-turquoise-ray
+        - /usr/bin/env sh .sqa/script.seedy-viridian-gorilla.sh
+        container: qc.sec_skinny-seashell-russel
   QC.Sty:
     repos:
-      gitlab.in2p3.fr/escape2020/wp3/eossr flake8:
+      github.com/AI4S2S/lilio flake8:
         commands:
-        - /usr/bin/env sh .sqa/script.scummy-xanthic-ostrich.sh
-        container: qc.sty_wimpy-corn-gorilla
-      gitlab.in2p3.fr/escape2020/wp3/eossr hadolint:
+        - /usr/bin/env sh .sqa/script.muggy-cerulean-ragdoll.sh
+        container: qc.sty_squeaky-mauve-drever
+      github.com/AI4S2S/lilio jsonlint:
         commands:
-        - /usr/bin/env sh .sqa/script.skinny-asparagus-impala.sh
-        container: qc.sty_geeky-persimmon-capuchin
-      gitlab.in2p3.fr/escape2020/wp3/eossr jsonlint:
-        commands:
-        - /usr/bin/env sh .sqa/script.muggy-green-zebu.sh
-        container: qc.sty_homely-saffron-bongo
+        - /usr/bin/env sh .sqa/script.gamy-platinum-cockroach.sh
+        container: qc.sty_skimpy-ivory-lynx
   QC.Ver:
     repos:
-      gitlab.in2p3.fr/escape2020/wp3/eossr get_git_tags.py:
+      github.com/AI4S2S/lilio get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.clammy-cardinal-monster.sh
-        container: qc.ver_gummy-lime-guppy
+        - /usr/bin/env sh .sqa/script.randy-orange-mole.sh
+        container: qc.ver_bumpy-olivine-dalmatian
 timeout: 5400
